# simula

./: .gitignore  AGENTS.md  DESIGN.md  README.md  analysis.py  env.sample.toml  eslint.config.js  main.py  package.json  playwright.config.ts  pyproject.toml  skills-lock.json  tsconfig.json
docs/: README.md  analysis.md  architecture.md  configuration.md  contracts.md  llm.md  operations.md  timeline.md
scripts/: install_deps_ubuntu.sh  install_noto_sans_kr_ubuntu.sh
senario.samples/: 01_consumer_marketing_launch.md  01_i-am-solo_31_2026-04-10.md  02_wargame_iran_us.md  03_startup_boardroom_crisis.md  04_city_hall_disaster_response.md  05_campus_election_scandal.md  05_korean_enterprise_promo_approval_conflict.md  06_fantasy_court_intrigue.md  06_new_technology_internal_conflict.md  07_relationship_triangle_conflict.md  08_family_clinic_care_decision.md  09_apartment_redevelopment_committee.md  10_regional_bank_social_media_run.md  11_airport_weather_disruption_command.md  12_hospital_network_ransomware_coordination.md  README.md
tests/: __init__.py  helpers.py  prompt_contract_registry.py  test_actor_logging.py  test_actor_proposal_semantics.py  test_analysis.py  test_analysis_cli.py  test_analysis_runner.py  test_cli.py  test_config_loader.py  test_default_payloads.py  test_env_example.py  test_executor.py  test_fast_path_graphs.py  test_finalization_reporting.py  test_llm_providers.py  test_llm_renderers.py  test_llm_router.py  test_logging_console.py  test_orm_store.py  test_output_parsers.py  test_package_exports.py  test_planning_nodes.py  test_presentation.py  (+18 more)
(+599 files in other folders)
