[project]
name = "simula"
version = "0.1.0"
description = "LangGraph 기반 mailbox-first 시뮬레이션 프로토타입"
readme = "README.md"
authors = [
    { name = "keonho-kim", email = "keonhok0315@gmail.com" }
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "json-repair>=0.58.7",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.0",
    "langchain-aws>=0.2.32",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "langgraph-checkpoint>=4.0.1",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pydantic>=2.12.5",
    "psycopg>=3.2.9",
    "sqlalchemy>=2.0.43",
]

[project.scripts]
simula = "simula.entrypoints.cli:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
